uptime-kuma/uptime-monitoring-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma-deployment
  labels:
    app: uptime-kuma
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: uptime-kuma
  template: 
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
      - name: uptime-kuma
        image: louislam/uptime-kuma:1
        ports: 
        - containerPort: 3001
