uptime-kuma/uptime-monitoring-service.yml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-service
spec:
  selector:
    app: uptime-kuma
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
