uptime-kuma/uptime-monitoring-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1 
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: uptime.kuma.ingress
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: uptime-kuma-service
                port: 
                  number: 3001
